--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "dev:prod": "NODE_ENV=production nodemon server-production.js",
     "build": "npm run build:client",
     "build:client": "webpack --mode production",
+    "build:netlify": "set NETLIFY=true && npm run build:client",
+    "copy:netlify": "if not exist dist mkdir dist && xcopy public\\* dist\\ /E /Y",
     "dev:client": "webpack serve --mode development",
+    "dev:netlify": "netlify dev",
     "deploy": "chmod +x scripts/deploy-production.sh && ./scripts/deploy-production.sh deploy pm2",
     "deploy:docker": "chmod +x scripts/deploy-production.sh && ./scripts/deploy-production.sh deploy docker",
+    "deploy:netlify": "netlify deploy --prod",
     "test": "jest",
     "test:prod": "NODE_ENV=production jest",
     "lint": "eslint .",
@@ -73,6 +77,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "autoprefixer": "^10.4.16",
@@ -82,6 +89,7 @@
     "eslint": "^8.52.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "netlify-cli": "^17.0.0",
     "nodemon": "^3.0.1",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
